// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageLetterTemplates renders authoring letter templates 1`] = `
<DocumentFragment>
  <form>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-hint nhsuk-u-reading-width"
          data-testid="table-hint"
        >
          Choose all the templates that you want to include in this message plan. You can only choose one template for each language.
        </div>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-checkboxes"
            id="language-templates"
          >
            <table
              class="nhsuk-table-responsive"
              data-testid="language-templates-table"
              id="language-templates-table"
            >
              <thead
                class="nhsuk-table__head"
                role="rowgroup"
              >
                <tr
                  class="nhsuk-table__row"
                >
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-select"
                    scope="col"
                  >
                    Select
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-name"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-type"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-last-edited"
                    scope="col"
                  >
                    Last edited
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-action"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="nhsuk-table__body"
              >
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        checked=""
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="french-authoring-template-id-checkbox"
                        id="template-french-authoring-template-id"
                        name="template_french-authoring-template-id"
                        type="checkbox"
                        value="french-authoring-template-id:fr"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-french-authoring-template-id"
                        id="template-french-authoring-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-french-authoring-template-id"
                    >
                      French Authoring Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - French
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview French Authoring Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="french-authoring-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/french-authoring-template-id?lockNumber=5"
                      id="preview-template-link-0"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`LanguageLetterTemplates renders list of foreign language letter templates 1`] = `
<DocumentFragment>
  <form>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-hint nhsuk-u-reading-width"
          data-testid="table-hint"
        >
          Choose all the templates that you want to include in this message plan. You can only choose one template for each language.
        </div>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-checkboxes"
            id="language-templates"
          >
            <table
              class="nhsuk-table-responsive"
              data-testid="language-templates-table"
              id="language-templates-table"
            >
              <thead
                class="nhsuk-table__head"
                role="rowgroup"
              >
                <tr
                  class="nhsuk-table__row"
                >
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-select"
                    scope="col"
                  >
                    Select
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-name"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-type"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-last-edited"
                    scope="col"
                  >
                    Last edited
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-action"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="nhsuk-table__body"
              >
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="french-template-id-checkbox"
                        id="template-french-template-id"
                        name="template_french-template-id"
                        type="checkbox"
                        value="french-template-id:fr"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-french-template-id"
                        id="template-french-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-french-template-id"
                    >
                      French Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - French
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview French Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="french-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/french-template-id?lockNumber=5"
                      id="preview-template-link-0"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="polish-template-id-checkbox"
                        id="template-polish-template-id"
                        name="template_polish-template-id"
                        type="checkbox"
                        value="polish-template-id:pl"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-polish-template-id"
                        id="template-polish-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-polish-template-id"
                    >
                      Polish Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - Polish
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview Polish Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="polish-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/polish-template-id?lockNumber=5"
                      id="preview-template-link-1"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="german-template-id-checkbox"
                        id="template-german-template-id"
                        name="template_german-template-id"
                        type="checkbox"
                        value="german-template-id:de"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-german-template-id"
                        id="template-german-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-german-template-id"
                    >
                      German Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - German
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview German Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="german-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/german-template-id?lockNumber=5"
                      id="preview-template-link-2"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`LanguageLetterTemplates renders templates list with pre-selected templates 1`] = `
<DocumentFragment>
  <form>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-hint nhsuk-u-reading-width"
          data-testid="table-hint"
        >
          Choose all the templates that you want to include in this message plan. You can only choose one template for each language.
        </div>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-checkboxes"
            id="language-templates"
          >
            <table
              class="nhsuk-table-responsive"
              data-testid="language-templates-table"
              id="language-templates-table"
            >
              <thead
                class="nhsuk-table__head"
                role="rowgroup"
              >
                <tr
                  class="nhsuk-table__row"
                >
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-select"
                    scope="col"
                  >
                    Select
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-name"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-type"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-last-edited"
                    scope="col"
                  >
                    Last edited
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-action"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="nhsuk-table__body"
              >
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        checked=""
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="french-template-id-checkbox"
                        id="template-french-template-id"
                        name="template_french-template-id"
                        type="checkbox"
                        value="french-template-id:fr"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-french-template-id"
                        id="template-french-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-french-template-id"
                    >
                      French Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - French
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview French Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="french-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/french-template-id?lockNumber=5"
                      id="preview-template-link-0"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        checked=""
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="polish-template-id-checkbox"
                        id="template-polish-template-id"
                        name="template_polish-template-id"
                        type="checkbox"
                        value="polish-template-id:pl"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-polish-template-id"
                        id="template-polish-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-polish-template-id"
                    >
                      Polish Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - Polish
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview Polish Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="polish-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/polish-template-id?lockNumber=5"
                      id="preview-template-link-1"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="german-template-id-checkbox"
                        id="template-german-template-id"
                        name="template_german-template-id"
                        type="checkbox"
                        value="german-template-id:de"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-german-template-id"
                        id="template-german-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-german-template-id"
                    >
                      German Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - German
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview German Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="german-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/german-template-id?lockNumber=5"
                      id="preview-template-link-2"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`LanguageLetterTemplates renders templates with duplicate language error state 1`] = `
<DocumentFragment>
  <form>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-hint nhsuk-u-reading-width"
          data-testid="table-hint"
        >
          Choose all the templates that you want to include in this message plan. You can only choose one template for each language.
        </div>
        <div
          class="nhsuk-form-group nhsuk-form-group--error"
        >
          <span
            class="nhsuk-error-message"
            id="language-templates--error-message"
          >
            <span
              class="nhsuk-u-visually-hidden"
            >
              Error: 
            </span>
            Choose only one template for each language
          </span>
          <div
            aria-describedby="language-templates--error-message"
            class="nhsuk-checkboxes"
            id="language-templates"
          >
            <table
              class="nhsuk-table-responsive"
              data-testid="language-templates-table"
              id="language-templates-table"
            >
              <thead
                class="nhsuk-table__head"
                role="rowgroup"
              >
                <tr
                  class="nhsuk-table__row"
                >
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-select"
                    scope="col"
                  >
                    Select
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-name"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-type"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-last-edited"
                    scope="col"
                  >
                    Last edited
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-action"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="nhsuk-table__body"
              >
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="french-template-id-checkbox"
                        id="template-french-template-id"
                        name="template_french-template-id"
                        type="checkbox"
                        value="french-template-id:fr"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-french-template-id"
                        id="template-french-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-french-template-id"
                    >
                      French Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - French
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview French Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="french-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/french-template-id?lockNumber=5"
                      id="preview-template-link-0"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="polish-template-id-checkbox"
                        id="template-polish-template-id"
                        name="template_polish-template-id"
                        type="checkbox"
                        value="polish-template-id:pl"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-polish-template-id"
                        id="template-polish-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-polish-template-id"
                    >
                      Polish Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - Polish
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview Polish Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="polish-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/polish-template-id?lockNumber=5"
                      id="preview-template-link-1"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="german-template-id-checkbox"
                        id="template-german-template-id"
                        name="template_german-template-id"
                        type="checkbox"
                        value="german-template-id:de"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-german-template-id"
                        id="template-german-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-german-template-id"
                    >
                      German Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - German
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview German Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="german-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/german-template-id?lockNumber=5"
                      id="preview-template-link-2"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`LanguageLetterTemplates renders templates with error state 1`] = `
<DocumentFragment>
  <form>
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-hint nhsuk-u-reading-width"
          data-testid="table-hint"
        >
          Choose all the templates that you want to include in this message plan. You can only choose one template for each language.
        </div>
        <div
          class="nhsuk-form-group nhsuk-form-group--error"
        >
          <span
            class="nhsuk-error-message"
            id="language-templates--error-message"
          >
            <span
              class="nhsuk-u-visually-hidden"
            >
              Error: 
            </span>
            Please select at least one language template
          </span>
          <div
            aria-describedby="language-templates--error-message"
            class="nhsuk-checkboxes"
            id="language-templates"
          >
            <table
              class="nhsuk-table-responsive"
              data-testid="language-templates-table"
              id="language-templates-table"
            >
              <thead
                class="nhsuk-table__head"
                role="rowgroup"
              >
                <tr
                  class="nhsuk-table__row"
                >
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-select"
                    scope="col"
                  >
                    Select
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-name"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-type"
                    scope="col"
                  >
                    Type
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-last-edited"
                    scope="col"
                  >
                    Last edited
                  </th>
                  <th
                    class="nhsuk-table__header"
                    data-testid="language-templates-table-header-template-action"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                class="nhsuk-table__body"
              >
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="french-template-id-checkbox"
                        id="template-french-template-id"
                        name="template_french-template-id"
                        type="checkbox"
                        value="french-template-id:fr"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-french-template-id"
                        id="template-french-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-french-template-id"
                    >
                      French Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - French
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview French Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="french-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/french-template-id?lockNumber=5"
                      id="preview-template-link-0"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="polish-template-id-checkbox"
                        id="template-polish-template-id"
                        name="template_polish-template-id"
                        type="checkbox"
                        value="polish-template-id:pl"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-polish-template-id"
                        id="template-polish-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-polish-template-id"
                    >
                      Polish Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - Polish
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview Polish Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="polish-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/polish-template-id?lockNumber=5"
                      id="preview-template-link-1"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
                <tr
                  class="nhsuk-table__row"
                >
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Select 
                    </span>
                    <div
                      class="nhsuk-checkboxes__item"
                    >
                      <input
                        class="nhsuk-checkboxes__input"
                        data-checkbox-exclusive-group="language-templates"
                        data-testid="german-template-id-checkbox"
                        id="template-german-template-id"
                        name="template_german-template-id"
                        type="checkbox"
                        value="german-template-id:de"
                      />
                      <label
                        class="nhsuk-label nhsuk-checkboxes__label"
                        for="template-german-template-id"
                        id="template-german-template-id--label"
                      >
                         
                      </label>
                    </div>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Name 
                    </span>
                    <label
                      class="nhsuk-label nhsuk-checkboxes__label nhsuk-u-margin-0 nhsuk-u-padding-0"
                      for="template-german-template-id"
                    >
                      German Letter Template
                    </label>
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Type 
                    </span>
                    Standard letter - German
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                      Last edited 
                    </span>
                    13th Jan 2025
                    <br />
                    10:19
                  </td>
                  <td
                    class="nhsuk-table__cell"
                    role="cell"
                  >
                    <span
                      aria-hidden="true"
                      class="nhsuk-table-responsive__heading"
                    >
                       
                    </span>
                    <a
                      aria-label="Preview German Letter Template"
                      class="nhsuk-u-margin-bottom-2 nhsuk-link"
                      data-testid="german-template-id-preview-link"
                      href="/message-plans/choose-other-language-letter-template/routing-config-id/preview-template/german-template-id?lockNumber=5"
                      id="preview-template-link-2"
                    >
                      Preview
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
